Merged runtime-jvm module, added Arch and OS enum